# RAG-System

./: .env.example  .gitignore  Dockerfile.api  RAG-Assistant.bat  README.md  docker-compose.yml  ingest_markdown.py  ocr_ingest.py  pyproject.toml
api/: __init__.py  documents.py  main.py  schemas.py  session.py  streaming.py
embedding/: __init__.py  embedder.py  ingest_vectors.py  vector_store.py
evaluation/: evaluate.py  golden_dataset.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/components/: Aurora.tsx  ChatApp.tsx  ChatInterface.tsx  Citation.tsx  DocumentsModal.tsx  InstallButton.tsx  Markdown.tsx  Message.tsx  ShimmerButton.tsx  Sidebar.tsx  icons.tsx
frontend/lib/: answer.ts  citations.ts  conversations.ts  documents.ts  stream.ts
frontend/public/: sw.js
frontend/types/: index.ts
ingestion/: __init__.py  chunker.py  extractors.py  metadata.py  parsers.py  pipeline.py  sanitizer.py
observability/: langfuse_handler.py
orchestration/: __init__.py  app.py  graph.py  state.py
orchestration/nodes/: __init__.py  generator.py  retriever_node.py  rewriter.py  router.py
research/: 01-rag-fundamentals.md  02-document-processing.md  03-embeddings.md  04-vector-databases.md  05-retrieval-techniques.md  06-rag-frameworks.md  07-system-architecture.md  08-implementation-roadmap.md
retrieval/: __init__.py  dense_search.py  fusion.py  reranker.py  retriever.py  sparse_search.py
scripts/: launch.ps1  make_icons.py  stop.ps1
tests/: test_api.py  test_embedding.py  test_evaluation.py  test_observability.py  test_orchestration.py  test_pipeline.py  test_retrieval.py
