[project]
name = "rag-system"
version = "0.1.0"
description = "Production-grade Enterprise RAG system"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "unstructured[pdf]>=0.14.0",
    "tiktoken>=0.7.0",
    "python-dateutil>=2.9.0",
    "FlagEmbedding>=1.2.0",
    "qdrant-client>=1.9.0",
    "torch>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "embedding", "retrieval", "orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
