[project]
name = "rag-system"
version = "0.1.0"
description = "Production-grade Enterprise RAG system"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "unstructured[pdf]>=0.14.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "tiktoken>=0.7.0",
    "python-dateutil>=2.9.0",
    "FlagEmbedding>=1.2.0",
    "qdrant-client>=1.9.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.6.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
    "redis>=5.0.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    "langfuse>=2.20.0",
    "langchain-core>=0.2.0",
    "ragas>=0.1.14",
    "datasets>=2.19.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "embedding", "retrieval", "orchestration", "api", "observability", "evaluation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
